# TPM-OMPT

./: .gitignore  install_dependencies  submit_tpm_benchmarks
benchmarks/: Makefile
benchmarks/dense/: invert.h  lu.h  qr.h
benchmarks/dense/srclu/: geswp.h  lacpy.h
benchmarks/dense/srcqr/: dgeqrt.h  dormqr.h  dpamm.h  dparfb.h  dtsmqr.h  dtsqrt.h
benchmarks/include/: counters.h  print.h  tile_address.h  utils.h
benchmarks/sparse/: poisson.h
benchmarks/sparse/srcpoisson/: estimate.h
benchmarks/sparse/srcslu/: bmod.h  lu0.h
benchmarks_tpm/: Makefile  main.c  tpm_benchmark
benchmarks_tpm/dense/: cholesky.h  invert.h  sylsvd.h
benchmarks_tpm/dense/srclu/: tile_lapacke_conversion.h
benchmarks_tpm/include/: common.h  descriptor.h  populate.h
benchmarks_tpm/sparse/: sparselu.h
benchmarks_tpm/sparse/srcpoisson/: copy.h  functions.h  jacobi.h
benchmarks_tpm/sparse/srcslu/: bdiv.h  empty_block.h  (+1 more)
daemon/: CMakeCache.txt  CMakeLists.txt  TPMpower
daemon/include/: tpm_power.h
daemon/include/internal/: utils.h
daemon/include/monitor/: control.h  cvector.h  dump.h  measure.h  monitor.h
daemon/include/zmq/: server.h
ml/: main.py
ml/data_treatment/: algo_tasks.csv  dictionaries.py  merge.py  test.py  utils.py
ml/learning/: single_target_classifier.py  single_target_edp.py  two_targets_classifier.py
ml/plot/: plot.py
ompt/: Makefile  trace.c
ompt/include/: callbacks.h  dump.h  trace.h  utils.h
ompt/zmq/: client.h  zutils.h
power/: CMakeLists.txt  Makefile  TPMpower  cmake_install.cmake
power/include/: tpm_power.h
power/src/: power.c
(+7 files in other folders)
